--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 <body>
 
-    <canvas class="zdog-canvas" width="420" height="420"></canvas>
+    <div class="landing-overlay"></div>
+    <canvas class="zdog-canvas"></canvas>
+
+    <footer>
+        <h1>Things</h1>
+    </footer>
 
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/zfont/dist/zfont.min.js"></script>
