--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <html>
 
 <head>
-    <title>Zdog Demo</title>
+    <title>Happy First Year at IDEO, Lin!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zdog Demo">
+    <meta name="description" content="1 Year at IDEO">
     <link rel="stylesheet" type="text/css" href="base.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/zfont/dist/zfont.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Schoolbell&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <div class="landing-overlay"></div>
     <canvas class="zdog-canvas"></canvas>
 
     <footer>
-        <h1>Things</h1>
+        <p>Happy First Year at IDEO!</p>
     </footer>
 
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/zfont/dist/zfont.min.js"></script>
     <script src="js/script.js"></script>
 
 </body>
